HelloApp in angular javascript (not typescript yet)

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,10 +4,25 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.min.js"></script>
+
 </head>
 <body>
 
     <h3>Hello, world!</h3>
+
+
+    <div ng-app="HelloApp" ng-controller="HelloCtrl" ng-cloak>
+
+        Hello, {{ name }} (Jackass)
+
+    </div>
+
+
+    <script src="/js/poker-js.js"></script>
+
 
 </body>
 </html>
