--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -19,11 +19,17 @@
 
         <h5 :title="message">Hello, {{ name }}</h5>
 
-        <ul>
-            <li v-for="player in players" v-on:click="player.playing = !player.playing">
-                {{ player.name }} ${{ player.chips }}, isPlaying? {{ player.playing }}
-            </li>
-        </ul>
+        <div v-if="ui != null && ui.table != null">
+
+            <ul>
+                <li v-for="seat in ui.table.seats">
+                    {{ seat.getSeatName() }}: <span v-if="seat != null && seat.player != null">{{ seat.player.name }} {{ ui.chipFormatter.format(seat.player.chips) }}, isActive? {{ seat.player.isActive }}</span>
+                </li>
+            </ul>
+        </div>
+        <div v-else>
+            We have no table yet.
+        </div>
 
     </div>
 
