--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -19,6 +19,20 @@
                         <div class="name"><span v-if="seat != null && seat.player != null">{{ seat.player.name }}</span></div>
                         <div class="avatar">&nbsp;</div>
                         <div class="chips"><span v-if="seat != null && seat.player != null">{{ ui.chipFormatter.format(seat.player.chips) }}</span></div>
+                        <div class="cards">
+                            <div v-if="seat.hand">
+                                <div v-for="dealtCard in seat.hand.cards" class="card card-small-2" :class="getCardClass(dealtCard)">
+                                    <div v-if="dealtCard != null && dealtCard.isFaceUp" class="symbols left">
+                                        <div class="value">{{ dealtCard.card.value.symbol }}</div>
+                                        <div class="suit">{{ dealtCard.card.suit.symbol }}</div>
+                                    </div>
+                                    <div v-if="dealtCard != null && dealtCard.isFaceUp" class="symbols right">
+                                        <div class="value">{{ dealtCard.card.value.symbol }}</div>
+                                        <div class="suit">{{ dealtCard.card.suit.symbol }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="pots">
@@ -35,7 +49,7 @@
                         <div>Bet: {{ ui.chipFormatter.format(betAmount) }}</div>
                     </div>
 
-                    <div class="board">
+                    <div v-if="false" class="board">
                         <div class="card-small">
                             <div class="value club">A</div>
                             <div class="suit club">&clubs;</div>
