added message to avatar to indicate bet; added BettingComplete action

--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -17,7 +17,11 @@
 
                     <div v-for="(seat, index) in ui.table.seats" class="seat" :class="'seat-'+seat.index">
                         <div class="name"><span v-if="seat != null && seat.player != null">{{ seat.player.name }}</span></div>
-                        <div class="avatar">&nbsp;</div>
+                        <div class="avatar">
+                            <div class="action-container">
+                                <div class="action" v-if="ui.seatAction.has(index)">{{ ui.seatAction.get(index) }}</div>
+                            </div>
+                        </div>
                         <div class="chips"><span v-if="seat != null && seat.player != null">{{ ui.chipFormatter.format(seat.player.chips) }}</span></div>
                         <div class="cards">
                             <div v-if="seat.hand">
