Added transition when highlighting active seat

--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -9,6 +9,8 @@
 
     <div id="poker">
 
+        <player-comp></player-comp>
+
         <div v-if="ui != null && ui.table != null">
 
             <div class="table seats-6">
