WIP: Adding seatIndex to Bet class; adding GatherBetsAction to tell clients to move their chips - not quite working - working through duplicate key exception

--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -27,13 +27,10 @@
 
                     </div>
 
-                    <bet-component v-for="(bet, seatIndex) in ui.table.betTracker.bets"
-                                   :key="seatIndex"
+                    <bet-component v-for="(bet, betName, index) in ui.table.betTracker.bets"
+                                   :key="index"
                                    :bet="bet"
-                                   :ui="ui" 
-                                   :seatIndex="seatIndex"
-                                   class="chips-stage"
-                                   :class="'seat-'+seatIndex">
+                                   :ui="ui">
                     </bet-component>
 
                     <div v-if="ui.table.buttonIndex != null" class="button" :class="'seat-'+ui.table.buttonIndex">
