Figured out that the key needs to be unique even across v-for loops, if they have the same parent

--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -27,8 +27,8 @@
 
                     </div>
 
-                    <bet-component v-for="(bet, betName, index) in ui.table.betTracker.bets"
-                                   :key="index"
+                    <bet-component v-for="bet in ui.table.betTracker.bets"
+                                   :key="'bet-' + bet.seatIndex"
                                    :bet="bet"
                                    :ui="ui">
                     </bet-component>
