--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -15,23 +15,32 @@
 
                 <div class="betting-line">
 
-                    <seat-component v-for="seat in ui.table.seats" :key="seat.index" :seat="seat" :ui="ui" :bet-tracker="ui.table.betTracker">hello</seat-component>
+                    <seat-component v-for="seat in ui.table.seats"
+                                    :key="'seat-' + seat.index"
+                                    :seat="seat"
+                                    :ui="ui"
+                                    :bet-tracker="ui.table.betTracker">
+                    </seat-component>
+
                     <dealer-box-component></dealer-box-component>
-
-                    <div class="pots">
-
-                        <div v-for="(pot, index) in ui.table.betTracker.pots" class="pot" :class="'pot-' + pot.index">
-                            <div class="name">{{ pot.getName() }}</div>
-                            <div class="chips">{{ ui.chipFormatter.format(pot.amount) }}</div>
-                        </div>
-
-                    </div>
 
                     <bet-component v-for="bet in ui.table.betTracker.bets"
                                    :key="'bet-' + bet.seatIndex"
                                    :bet="bet"
                                    :ui="ui">
                     </bet-component>
+
+                    <pot-component v-for="pot in ui.table.betTracker.pots"
+                                   :key="'pot-' + pot.index"
+                                   :pot="pot"
+                                   :ui="ui">
+                    </pot-component>
+
+                    <won-pot-component v-for="pot in ui.wonPots"
+                                       :key="'won-pot-' + pot.index"
+                                       :pot="pot"
+                                       :ui="ui">
+                    </won-pot-component>
 
                     <div v-if="ui.table.buttonIndex != null" class="button" :class="'seat-'+ui.table.buttonIndex">
                         <div class="text">button</div>
