--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -52,6 +52,8 @@
 
             </div><!-- table seats-6 -->
 
+            <log-component :ui="ui"></log-component>
+
         </div>
         <div v-else>
             We have no table yet.
