Changed game to Holdem, added Board to display

--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -46,6 +46,10 @@
                         <div class="text">button</div>
                     </div>
 
+                    <board-component :board="ui.table.board"
+                                     :ui="ui">
+                    </board-component>
+
 
                 </div>
 
