--- a/src/client/ui/index.html
+++ b/src/client/ui/index.html
@@ -10,61 +10,13 @@
     <div id="poker">
 
         <div v-if="ui != null && ui.table != null">
-
-            <div class="table seats-6">
-
-                <div class="betting-line">
-
-                    <seat-component v-for="seat in ui.table.seats"
-                                    :key="'seat-' + seat.index"
-                                    :seat="seat"
-                                    :ui="ui"
-                                    :bet-tracker="ui.table.betTracker">
-                    </seat-component>
-
-                    <dealer-box-component></dealer-box-component>
-
-                    <bet-component v-for="bet in ui.table.betTracker.bets"
-                                   :key="'bet-' + bet.seatIndex"
-                                   :bet="bet"
-                                   :ui="ui">
-                    </bet-component>
-
-                    <pot-component v-for="pot in ui.table.betTracker.pots"
-                                   :key="'pot-' + pot.index"
-                                   :pot="pot"
-                                   :ui="ui">
-                    </pot-component>
-
-                    <won-pot-component v-for="pot in ui.wonPots"
-                                       :key="'won-pot-' + pot.index"
-                                       :pot="pot"
-                                       :ui="ui">
-                    </won-pot-component>
-
-                    <div v-if="ui.table.buttonIndex != null" class="button" :class="'seat-'+ui.table.buttonIndex">
-                        <div class="text">button</div>
-                    </div>
-
-                    <board-component :board="ui.table.board"
-                                     :ui="ui">
-                    </board-component>
-
-
-                </div>
-
-
-            </div><!-- table seats-6 -->
-
-            <log-component :ui="ui"></log-component>
-
+            <table-component :ui="ui"></table-component>
         </div>
         <div v-else>
             We have no table yet.
         </div>
 
-    </div>
-
+    </div><!--id="poker" -->
 
 </body>
 </html>
