converted to use App.vue and at least initial version of router

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,16 +7,7 @@
 </head>
 <body>
 
-    <div id="poker">
-
-        <div v-if="ui != null && ui.table != null">
-            <table-component :ui="ui"></table-component>
-        </div>
-        <div v-else>
-            We have no table yet.
-        </div>
-
-    </div><!--id="poker" -->
+    <div id="app"></div>
 
 </body>
 </html>
